correccion cosas malas

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,17 +1,17 @@
-# Configuracion de MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/muebleria?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=xodaenmoto123
+# Configuracion MySQL (usa variables de entorno en Docker)
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/muebleria?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:1234}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Configuracion de JPA/Hibernate
+# JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# Configuracion del servidor
+# Server
 server.port=8080
 
-# Configuracion de datos de inicializacion
-spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
+# Logging
+logging.level.com.muebleria.app=DEBUG
