--- a/.env
+++ b/.env
@@ -1,13 +1,12 @@
 # ==========================================
 # VARIABLES DE ENTORNO PARA DOCKER COMPOSE
 # ==========================================
-# Copia este archivo y renómbralo como: .env
-# Modifica los valores según tu configuración
+
 
 # Configuración de MySQL
 MYSQL_DATABASE=muebleria
 MYSQL_USER=root
 MYSQL_PASSWORD=1234
 
-# IMPORTANTE: En producción usa contraseñas seguras
-# Ejemplo: MYSQL_PASSWORD=MiC0ntr@s3ñ@S3gur@2024!
+MYSQL_USER=muebleria_user
+MYSQL_PASSWORD=muebleria_pass
