--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,19 +8,19 @@ services:
     image: mysql:8.0
     container_name: muebleria_mysql
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_ROOT_PASSWORD: "1234"
+      MYSQL_DATABASE: "muebleria"
+      MYSQL_USER: "muebleria_user"
+      MYSQL_PASSWORD: "muebleria_pass"
     ports:
       - "3307:3306"
     volumes:
-      # Persistencia de datos - los datos NO se pierden al reiniciar
       - mysql_data:/var/lib/mysql
     networks:
       - muebleria_network
+    command: --default-authentication-plugin=mysql_native_password
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${MYSQL_PASSWORD}"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-umuebleria_user", "-pmuebleria_pass"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -35,10 +35,9 @@ services:
       dockerfile: Dockerfile
     container_name: muebleria_backend
     environment:
-      # El hostname 'mysql' se resuelve automáticamente dentro de la red Docker
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/${MYSQL_DATABASE}?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
-      SPRING_DATASOURCE_USERNAME: ${MYSQL_USER}
-      SPRING_DATASOURCE_PASSWORD: ${MYSQL_PASSWORD}
+      SPRING_DATASOURCE_URL: "jdbc:mysql://mysql:3306/muebleria?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC"
+      SPRING_DATASOURCE_USERNAME: "muebleria_user"
+      SPRING_DATASOURCE_PASSWORD: "muebleria_pass"
     ports:
       - "8080:8080"
     depends_on:
@@ -56,9 +55,6 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     container_name: muebleria_frontend
-    environment:
-      # Esta variable se puede usar en React si se necesita
-      REACT_APP_API_URL: http://localhost:8080/api
     ports:
       - "80:80"
     depends_on:
